--- a/public/index.html
+++ b/public/index.html
@@ -178,6 +178,17 @@
             .catch(error => console.error('Fehler:', error));
         });
 
+        function deleteEntry(id) {
+            if (confirm("Möchten Sie diesen Eintrag wirklich löschen?")) {
+                fetch(`/delete-reading/${id}`, { method: 'DELETE' })
+                    .then(response => response.text())
+                    .then(() => window.location.reload())
+                    .catch(error => console.error('Fehler beim Löschen der Daten:', error));
+            } else {
+                console.log("Löschen abgebrochen.");
+            }
+        }
+
         function calculateForecast(timestamp) {
             const monthlyGrowth = [
                 192.4758595, 156.3866359, 144.3568947, 96.23792977,
