--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="de">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gas-Verbrauch</title>
     <style>
         /* Grundlegende Styles */
@@ -23,20 +22,20 @@
         h1 {
             color: #4a90e2;
             margin-top: 20px;
-            font-size: 1.6em;
+            font-size: 1.8em;
         }
 
         /* Formular Styling */
         form {
             background-color: #fff;
-            padding: 15px;
+            padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            width: 90%;
+            width: 100%;
             max-width: 500px;
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 15px;
         }
 
         label {
@@ -44,9 +43,8 @@
             color: #555;
         }
 
-        input[type="number"],
-        input[type="datetime-local"] {
-            padding: 10px;
+        input[type="number"], input[type="datetime-local"] {
+            padding: 12px;
             font-size: 0.9em;
             width: 100%;
             border: 1px solid #ccc;
@@ -74,7 +72,7 @@
         .table-container {
             width: 100%;
             max-width: 100vw;
-            margin-top: 20px;
+            margin-top: 30px;
             overflow-x: auto;
         }
 
@@ -88,9 +86,9 @@
 
         th, td {
             border: 1px solid #e0e0e0;
-            padding: 10px;
+            padding: 12px;
             text-align: center;
-            font-size: 0.8em;
+            font-size: 0.9em;
         }
 
         th {
@@ -103,7 +101,7 @@
             background-color: transparent;
             border: none;
             color: #d9534f;
-            font-size: 1em;
+            font-size: 1.2em;
             cursor: pointer;
         }
 
@@ -121,7 +119,6 @@
         }
     </style>
 </head>
-
 <body>
     <h1>Gas-Verbrauch</h1>
     <form id="gasForm">
@@ -162,7 +159,7 @@
             document.getElementById('timestamp').value = dateStr;
         }
 
-        document.getElementById('gasForm').addEventListener('submit', function (e) {
+        document.getElementById('gasForm').addEventListener('submit', function(e) {
             e.preventDefault();
             const meterReading = parseFloat(document.getElementById('meterReading').value).toFixed(3);
             const timestampInput = document.getElementById('timestamp').value;
@@ -173,12 +170,12 @@
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ reading: meterReading, timestamp: timestamp.toISOString() }),
             })
-                .then(response => response.text())
-                .then(data => {
-                    console.log("Serverantwort:", data);
-                    window.location.reload();
-                })
-                .catch(error => console.error('Fehler:', error));
+            .then(response => response.text())
+            .then(data => {
+                console.log("Serverantwort:", data);
+                window.location.reload();
+            })
+            .catch(error => console.error('Fehler:', error));
         });
 
         function deleteEntry(id) {
@@ -190,6 +187,55 @@
             } else {
                 console.log("Löschen abgebrochen.");
             }
+        }
+
+        function calculateForecast(timestamp) {
+            const monthlyGrowth = [
+                192.4758595, 156.3866359, 144.3568947, 96.23792977,
+                48.11896489, 24.05948244, 24.05948244, 24.05948244,
+                60.14870611, 96.23792977, 144.3568947, 192.4758595
+            ];
+            const date = new Date(timestamp);
+            const year = date.getFullYear();
+            const month = date.getMonth();
+            const dayOfMonth = date.getDate();
+            const hours = date.getHours();
+            let total = startValues[year] || startValues[2024];
+
+            for (let m = 0; m < month; m++) {
+                const daysInMonth = new Date(year, m + 1, 0).getDate();
+                total += (monthlyGrowth[m] / daysInMonth) * daysInMonth;
+            }
+
+            const daysInCurrentMonth = new Date(year, month + 1, 0).getDate();
+            const dailyRate = monthlyGrowth[month] / daysInCurrentMonth;
+
+            total += dailyRate * (dayOfMonth - 1);
+            total += dailyRate * (hours / 24);
+
+            return total.toFixed(3);
+        }
+
+        function calculateConsumption(meterReading, year) {
+            const baseValue = startValues[year] || startValues[2024];
+            return (meterReading - baseValue).toFixed(3);
+        }
+
+        function calculateForecastConsumption(forecastValue, year) {
+            const baseValue = startValues[year] || startValues[2024];
+            return (forecastValue - baseValue).toFixed(3);
+        }
+
+        function calculateDeviation(consumption, forecastConsumption) {
+            if (forecastConsumption === 0) return "N/A";
+            const deviation = (consumption / forecastConsumption) - 1;
+            return (deviation >= 0 ? "+" : "") + (deviation * 100).toFixed(2) + "%";
+        }
+
+        function applyDeviationColor(cell, deviation) {
+            const absoluteDeviation = Math.abs(deviation);
+            const intensity = Math.min(absoluteDeviation / 100, 1);
+            cell.style.backgroundColor = deviation > 0 ? `rgba(255, 99, 71, ${intensity})` : `rgba(144, 238, 144, ${intensity})`;
         }
 
         function loadDataAndDisplayTable() {
@@ -213,11 +259,21 @@
 
                         const date = new Date(entry.timestamp);
                         const formattedDate = `${String(date.getDate()).padStart(2, '0')}.${String(date.getMonth() + 1).padStart(2, '0')}.${String(date.getFullYear()).slice(-2)}, ${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`;
+                        const year = date.getFullYear();
+
+                        const forecastValue = parseFloat(calculateForecast(entry.timestamp));
+                        const consumptionValue = parseFloat(calculateConsumption(parseFloat(entry.reading), year));
+                        const forecastConsumptionValue = parseFloat(calculateForecastConsumption(forecastValue, year));
+                        const deviationValue = calculateDeviation(consumptionValue, forecastConsumptionValue);
 
                         dateCell.textContent = formattedDate;
                         readingCell.textContent = parseFloat(entry.reading).toFixed(3);
-                        consumptionCell.textContent = (parseFloat(entry.reading) - startValues[2024]).toFixed(3);
-                        deviationCell.textContent = deviation;
+                        consumptionCell.textContent = consumptionValue.toFixed(3);
+                        forecastCell.textContent = forecastValue.toFixed(3);
+                        forecastConsumptionCell.textContent = forecastConsumptionValue.toFixed(3);
+                        deviationCell.textContent = deviationValue;
+
+                        applyDeviationColor(deviationCell, parseFloat(deviationValue));
 
                         deleteButton.textContent = '✕';
                         deleteButton.className = 'delete-button';
@@ -243,5 +299,4 @@
         };
     </script>
 </body>
-
 </html>
