--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Gas-Verbrauch</title>
     <style>
         /* Grundlegende Styles */
@@ -23,6 +23,7 @@
             color: #4a90e2;
             margin-top: 20px;
             font-size: 1.8em;
+            text-align: center;
         }
 
         /* Formular Styling */
@@ -31,11 +32,12 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            width: 100%;
+            width: 90%;
             max-width: 500px;
             display: flex;
             flex-direction: column;
             gap: 15px;
+            box-sizing: border-box;
         }
 
         label {
@@ -74,21 +76,22 @@
             max-width: 100vw;
             margin-top: 30px;
             overflow-x: auto;
+            padding: 0 10px;
+            box-sizing: border-box;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 10px;
             background-color: #fff;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            font-size: 0.8em;
         }
 
         th, td {
             border: 1px solid #e0e0e0;
             padding: 12px;
             text-align: center;
-            font-size: 0.9em;
         }
 
         th {
