--- a/public/index.html
+++ b/public/index.html
@@ -143,7 +143,6 @@
                     <th>Prognose</th>
                     <th>Prognose-Verbrauch</th>
                     <th>Abweichung %</th>
-                    <th>⌀ Tägl. Verbrauch</th>
                     <th>Aktionen</th>
                 </tr>
             </thead>
@@ -242,12 +241,6 @@
             cell.style.backgroundColor = deviation > 0 ? `rgba(255, 99, 71, ${intensity})` : `rgba(144, 238, 144, ${intensity})`;
         }
 
-        function calculateAvgConsumption(consumption, previousTimestamp, currentTimestamp) {
-            const hoursPassed = (currentTimestamp - previousTimestamp) / 36e5;
-            const daysPassed = hoursPassed / 24;
-            return daysPassed > 0 ? (consumption / daysPassed).toFixed(3) : "N/A";
-        }
-
         function loadDataAndDisplayTable() {
             fetch('/get-readings')
                 .then(response => response.json())
@@ -256,7 +249,7 @@
                     const tableBody = document.querySelector('#readingsTable tbody');
                     tableBody.innerHTML = '';
 
-                    lastEntries.forEach((entry, index) => {
+                    lastEntries.forEach(entry => {
                         const row = document.createElement('tr');
                         const dateCell = document.createElement('td');
                         const readingCell = document.createElement('td');
@@ -264,7 +257,6 @@
                         const forecastCell = document.createElement('td');
                         const forecastConsumptionCell = document.createElement('td');
                         const deviationCell = document.createElement('td');
-                        const avgConsumptionCell = document.createElement('td');
                         const actionCell = document.createElement('td');
                         const deleteButton = document.createElement('button');
 
@@ -276,9 +268,6 @@
                         const consumptionValue = parseFloat(calculateConsumption(parseFloat(entry.reading), year));
                         const forecastConsumptionValue = parseFloat(calculateForecastConsumption(forecastValue, year));
                         const deviationValue = calculateDeviation(consumptionValue, forecastConsumptionValue);
-                        
-                        const previousEntry = lastEntries[index - 1];
-                        const avgConsumptionValue = previousEntry ? calculateAvgConsumption(consumptionValue - parseFloat(previousEntry.reading), new Date(previousEntry.timestamp), date) : "N/A";
 
                         dateCell.textContent = formattedDate;
                         readingCell.textContent = parseFloat(entry.reading).toFixed(3);
@@ -286,7 +275,6 @@
                         forecastCell.textContent = forecastValue.toFixed(3);
                         forecastConsumptionCell.textContent = forecastConsumptionValue.toFixed(3);
                         deviationCell.textContent = deviationValue;
-                        avgConsumptionCell.textContent = avgConsumptionValue;
 
                         applyDeviationColor(deviationCell, parseFloat(deviationValue));
 
@@ -301,7 +289,6 @@
                         row.appendChild(forecastCell);
                         row.appendChild(forecastConsumptionCell);
                         row.appendChild(deviationCell);
-                        row.appendChild(avgConsumptionCell);
                         row.appendChild(actionCell);
                         tableBody.appendChild(row);
                     });
